# tenzro-mcp-server

./: .gitignore  README.md  pyproject.toml
examples/: python-client.py  typescript-client.ts
tenzro_mcp_server/: __init__.py  __main__.py  rpc_client.py  server.py
tests/: conftest.py  test_rpc_client.py  test_tools.py
