[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenzro-mcp-server"
version = "0.1.0"
description = "MCP server for Tenzro Network — 104 blockchain tools for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
]

[project.scripts]
tenzro-mcp-server = "tenzro_mcp_server.server:main"

[project.urls]
Homepage = "https://tenzro.com"
Repository = "https://github.com/tenzro/tenzro-mcp-server"
